Ruler always measures 0.0 #42313

Closed
opened 2014-10-20 16:02:43 +02:00 by Mikhail Rachinskiy · 6 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.72.1 c35a649

Short description of error
Ruler always measures 0.0 on specific geometry in Ortho View mode.

Exact steps for others to reproduce the error
Open blend file ruler.blend and try to measure height of both boxes.

Here is GIF animation to illustrate the issue:
ruler.gif

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.72.1 c35a649 **Short description of error** Ruler always measures 0.0 on specific geometry in Ortho View mode. **Exact steps for others to reproduce the error** Open blend file [ruler.blend](https://archive.blender.org/developer/F118554/ruler.blend) and try to measure height of both boxes. Here is GIF animation to illustrate the issue: ![ruler.gif](https://archive.blender.org/developer/F118555/ruler.gif)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

This issue was referenced by 6bd53bb707

This issue was referenced by 6bd53bb707cbe912531f094e979ce6e5f5a97016

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6bd53bb707.

Closed by commit 6bd53bb707.

This issue was referenced by f01a811093

This issue was referenced by f01a81109374d88d79acdb5ce40f40ef15a8e00f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42313
There is no content yet.