Fix T42313: Ruler always measures 0.0

Passing 'ar' to snapObjectsRayEx would apply a ray-offset.